--- a/src/dojo/config/mapper_params_online_async.yaml
+++ b/src/dojo/config/mapper_params_online_async.yaml
@@ -15,14 +15,16 @@ slam_toolbox:
     base_frame: base_footprint
     scan_topic: /scan
     use_map_saver: true
-    mode: mapping
+    # mode: mapping
+    mode: localisation
+
 
     # if you'd like to immediately start continuing a map at a given pose
     # or at the dock, but they are mutually exclusive, if pose is given
     # will use pose
-    # map_file_name: /home/ru3ll/Desktop/dojo2024/dojo/maps/keja_serialize
+    map_file_name: /home/collins/projects/rb_dojo/dev_ws/my_map_serialize
     # map_start_pose: [0.0, 0.0, 0.0]
-    # map_start_at_dock: true
+    map_start_at_dock: true
 
     debug_logging: false
     throttle_scans: 1
