--- a/src/dojo/config/mapper_params_online_async.yaml
+++ b/src/dojo/config/mapper_params_online_async.yaml
@@ -8,45 +8,60 @@ slam_toolbox:
     ceres_trust_strategy: LEVENBERG_MARQUARDT
     ceres_dogleg_type: TRADITIONAL_DOGLEG
     ceres_loss_function: None
+    ceres_num_threads: 4  # This line limits the number of threads to 4
 
     # ROS Parameters
     odom_frame: odom
     map_frame: map
     base_frame: base_footprint
     scan_topic: /scan
-    use_map_saver: true
-    # mode: mapping
-    mode: localisation
+    # use_map_saver: true
+
+    # uncomment any of these if mapping or localising 
+    mode: mapping
+    # mode: localisation
 
 
     # if you'd like to immediately start continuing a map at a given pose
     # or at the dock, but they are mutually exclusive, if pose is given
     # will use pose
-    map_file_name: /home/collins/projects/rb_dojo/dev_ws/my_map_serial
+    # map_file_name: /home/collins/projects/rb_dojo/dev_ws/ipic_serial
     # map_start_pose: [0.0, 0.0, 0.0]
-    map_start_at_dock: true
+    # map_start_at_dock: true
 
     debug_logging: false
     throttle_scans: 1
-    transform_publish_period: 0.02 #if 0 never publishes odometry
-    map_update_interval: 5.0
+    # transform_publish_period: 0.02 #if 0 never publishes odometry
+    transform_publish_period: 0.05  # Updated for better alignment with map updates
+    # map_update_interval: 5.0
+    map_update_interval: 0.5  # Increased for more frequent updates
     resolution: 0.05
     max_laser_range: 12.0 #for rastering images
-    minimum_time_interval: 0.5
+    # minimum_time_interval: 0.5
+    minimum_time_interval: 0.1
+
     transform_timeout: 0.2
     tf_buffer_duration: 30.
     stack_size_to_use: 40000000 #// program needs a larger stack size to serialize large maps
-    enable_interactive_mode: true
+    # enable_interactive_mode: true
+    enable_interactive_mode: false
+
     # General Parameters
     use_scan_matching: true
     use_scan_barycenter: true
-    minimum_travel_distance: 0.5
+    # minimum_travel_distance: 0.5
+    minimum_travel_distance: 0.3
     minimum_travel_heading: 0.5
-    scan_buffer_size: 10
-    scan_buffer_maximum_scan_distance: 10.0
+    # scan_buffer_size: 10
+    scan_buffer_size: 30  # Increased to handle more data
+
+    # scan_buffer_maximum_scan_distance: 10.0
+    scan_buffer_maximum_scan_distance: 15.0
     link_match_minimum_response_fine: 0.1  
-    link_scan_maximum_distance: 1.5
-    loop_search_maximum_distance: 3.0
+    # link_scan_maximum_distance: 1.5
+    link_scan_maximum_distance: 0.5  # Reduced to improve map accuracy
+    # loop_search_maximum_distance: 3.0
+    loop_search_maximum_distance: 6.0
     do_loop_closing: true 
     loop_match_minimum_chain_size: 10           
     loop_match_maximum_variance_coarse: 3.0  
@@ -54,9 +69,12 @@ slam_toolbox:
     loop_match_minimum_response_fine: 0.45
 
     # Correlation Parameters - Correlation Parameters
+    # correlation_search_space_dimension: 0.5
+    # correlation_search_space_resolution: 0.01
+    # correlation_search_space_smear_deviation: 0.1 
     correlation_search_space_dimension: 0.5
-    correlation_search_space_resolution: 0.01
-    correlation_search_space_smear_deviation: 0.1 
+    correlation_search_space_resolution: 0.005
+    correlation_search_space_smear_deviation: 0.05 
 
     # Correlation Parameters - Loop Closure Parameters
     loop_search_space_dimension: 8.0
@@ -64,8 +82,11 @@ slam_toolbox:
     loop_search_space_smear_deviation: 0.03
 
     # Scan Matcher Parameters
-    distance_variance_penalty: 0.5      
-    angle_variance_penalty: 1.0    
+    # distance_variance_penalty: 0.5      
+    # angle_variance_penalty: 1.0    
+    distance_variance_penalty: 0.1      
+    angle_variance_penalty: 0.3    
+
 
     fine_search_angle_offset: 0.00349     
     coarse_search_angle_offset: 0.349   
